err/nodebox-opengl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nodebox'...
Listing './lib/python3.5/site-packages/nodebox/ext'...
Listing './lib/python3.5/site-packages/nodebox/ext/psyco'...
Compiling './lib/python3.5/site-packages/nodebox/ext/psyco/__init__.py'...
***   File "./lib/python3.5/site-packages/nodebox/ext/psyco/__init__.py", line 31
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/ext/psyco/core.py'...
***   File "./lib/python3.5/site-packages/nodebox/ext/psyco/core.py", line 144
    raise error, ("nothing bindable found in %s object" %
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/ext/psyco/kdictproxy.py'...
***   File "./lib/python3.5/site-packages/nodebox/ext/psyco/kdictproxy.py", line 59
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/ext/psyco/profiler.py'...
***   File "./lib/python3.5/site-packages/nodebox/ext/psyco/profiler.py", line 192
    except error, e:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/ext/psyco/support.py'...
***   File "./lib/python3.5/site-packages/nodebox/ext/psyco/support.py", line 29
    raise error, "version mismatch between Psyco parts, reinstall it"
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nodebox/graphics'...
Compiling './lib/python3.5/site-packages/nodebox/graphics/bezier.py'...
***   File "./lib/python3.5/site-packages/nodebox/graphics/bezier.py", line 159
    raise PathError, "The given path is empty"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/graphics/context.py'...
***   File "./lib/python3.5/site-packages/nodebox/graphics/context.py", line 120
    r, g, b, a = [ch/base for ch in r, g, b, a]
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/graphics/geometry.py'...
***   File "./lib/python3.5/site-packages/nodebox/graphics/geometry.py", line 315
    def _set_xy(self, (x,y)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/graphics/physics.py'...
***   File "./lib/python3.5/site-packages/nodebox/graphics/physics.py", line 69
    def _set_xyz(self, (x,y,z)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/graphics/shader.py'...
***   File "./lib/python3.5/site-packages/nodebox/graphics/shader.py", line 270
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nodebox/gui'...
Compiling './lib/python3.5/site-packages/nodebox/gui/controls.py'...
***   File "./lib/python3.5/site-packages/nodebox/gui/controls.py", line 158
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, k)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nodebox/sound'...
Compiling './lib/python3.5/site-packages/nodebox/sound/osc.py'...
***   File "./lib/python3.5/site-packages/nodebox/sound/osc.py", line 45
    print repr(bytes[i-7:i+1])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nodebox/sound/process.py'...
***   File "./lib/python3.5/site-packages/nodebox/sound/process.py", line 230
    raise PDError, "no PD patch file at '%s'" % self.patch
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nodebox_opengl-1.6.1.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyglet'...
Listing './lib/python3.5/site-packages/pyglet/app'...
Listing './lib/python3.5/site-packages/pyglet/canvas'...
Listing './lib/python3.5/site-packages/pyglet/extlibs'...
Listing './lib/python3.5/site-packages/pyglet/font'...
Listing './lib/python3.5/site-packages/pyglet/gl'...
Listing './lib/python3.5/site-packages/pyglet/graphics'...
Listing './lib/python3.5/site-packages/pyglet/image'...
Listing './lib/python3.5/site-packages/pyglet/image/codecs'...
Listing './lib/python3.5/site-packages/pyglet/input'...
Listing './lib/python3.5/site-packages/pyglet/libs'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin/cocoapy'...
Listing './lib/python3.5/site-packages/pyglet/libs/win32'...
Listing './lib/python3.5/site-packages/pyglet/libs/x11'...
Listing './lib/python3.5/site-packages/pyglet/media'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/directsound'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/openal'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/pulse'...
Listing './lib/python3.5/site-packages/pyglet/media/sources'...
Listing './lib/python3.5/site-packages/pyglet/text'...
Listing './lib/python3.5/site-packages/pyglet/text/formats'...
Listing './lib/python3.5/site-packages/pyglet/window'...
Listing './lib/python3.5/site-packages/pyglet/window/carbon'...
Listing './lib/python3.5/site-packages/pyglet/window/cocoa'...
Listing './lib/python3.5/site-packages/pyglet/window/win32'...
Listing './lib/python3.5/site-packages/pyglet/window/xlib'...
Listing './lib/python3.5/site-packages/pyglet-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
